[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "pfleet"
version = "0.1.0"
description = "Sync all GitHub repositories for one or more users, concurrently"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["github", "git", "sync", "cli", "repositories"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Version Control :: Git",
]

[project.scripts]
pfleet = "pfleet:main"

[tool.setuptools]
py-modules = ["pfleet"]

[tool.ruff]
line-length = 130
target-version = "py310"
